Fixed 4 player horizontal layout - was whitespace issue. Made yellow color name darker, while still supporting old color for half-finished games

--- a/copenhagen.css
+++ b/copenhagen.css
@@ -26,6 +26,7 @@
 {
     text-align: center;
     position:  relative;
+    font-size: 0; /* so white space doesn't change layout */
 }
 
 .copen_button_disabled
@@ -113,7 +114,8 @@
     position: absolute;
     color:  white;
     font-weight: bold; 
-   
+    font-size:  17px;    
+
     width: 28px;
     height: 41px;
 
@@ -551,10 +553,12 @@ I'VE TRIED KEEPING THE GRABBING HAND DURING THE WHOLE DRAG OPERATION
 }
 
 .copen_playerboard_color_3785bd{ background-position: 0px 0px; }     /* blue */
-.copen_playerboard_color_fbcc3c{ background-position: -230px 0px; }  /* yellow */
 .copen_playerboard_color_3da045{ background-position: -460px 0px; }  /* green */
 .copen_playerboard_color_e2474a{ background-position: -690px 0px; }  /* red */
 
+.copen_playerboard_color_fbcc3c, /* deprecated */
+.copen_playerboard_color_d7b03b
+{ background-position: -230px 0px; }  /* yellow */
 
 
 .copen_playerboard .copen_coat_of_arms
@@ -569,9 +573,11 @@ I'VE TRIED KEEPING THE GRABBING HAND DURING THE WHOLE DRAG OPERATION
 }
 
 .copen_playerboard_color_3785bd .copen_coat_of_arms{ background-position: -44px 0px; }     /* blue */
-.copen_playerboard_color_fbcc3c .copen_coat_of_arms{ background-position: -0px 0px; }  /* yellow */
 .copen_playerboard_color_3da045 .copen_coat_of_arms{ background-position: -88px 0px; }  /* green */
 .copen_playerboard_color_e2474a .copen_coat_of_arms{ background-position: -133px 0px; }  /* red */
+
+.copen_playerboard_color_fbcc3c .copen_coat_of_arms, /* deprecated */
+.copen_playerboard_color_d7b03b .copen_coat_of_arms{ background-position: -0px 0px; }  /* yellow */
 
 
 .copen_playerboard .copen_coat_of_arms_1 { left: 81px; top: 256px; }
